--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-body {
-  background-image: url(Images/OXMRO1s-plain-desktop-backgrounds.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+body{
+  background-color: black;
+  /* background-repeat: no-repeat;
+  background-position: center; */
+}
+.opac{
+  opacity: 0.5;
+  pointer-events: none;
 }
 header {
   text-align: center;
@@ -11,13 +15,16 @@ header {
 #heading {
   width: 100%;
   height: 5em;
-  background-color: white;
+  background-color: #81b29a;
   padding-top: 0px;
 }
 div#navbar {
-  background-color: #219ebc;
+  background-color: #0a9396;
   text-align: center;
   height: 3em;
+}
+.hide {
+  display: none;
 }
 #navlist {
   display: inline-flex;
@@ -25,13 +32,81 @@ div#navbar {
   gap: 5em;
   align-items: center;
 }
-button{
+button#categories {
+  float: right;
+  width: 10%;
+  margin-right: 4px;
+  overflow: auto;
+  position: absolute;
+  top: 40px;
+  right: 20px;
+  top: 30px;
+}
+li:hover{
+    color: red;
+}
+div.card{
+gap: 1em;
+  overflow-wrap: break-word;
+  width: 100%;
+  background-color: #e6ccb2;
+}
+main#forgap{
+  padding: 1rem;
+  gap: 1em;
+  background-color:#b7b7a4;
+}
 
-    float: right;
-    width: 10%;
-    margin-right: 4px;
-    overflow: auto;
-    position: absolute;
-    top: 40px;
-    right: 20px;
+#newspublished{
+text-align: right;
+bottom: 0px;
+}
+.hide{
+  display: none;
+}
+#modal{
+  position:fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0) ;
+    border:2px solid black;
+    border-radius: 10px;
+    transition: 400ms ease-in-out;
+    z-index: 10;
+    background-color:white;
+    width: 400px;
+    max-width: 80%;
+}
+#modal.active{
+  transform: translate(-50%, -50%) scale(1);
+}
+#close{
+  cursor:pointer;
+  border:none;
+  outline: none;
+  background:none;
+  font-size: 1.5rem;
+
+}
+#modal-header{
+  
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  border-bottom: 1px solid black;
+  
+}
+#headingofmodal{
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 5px 7px;
+}
+#modalp {
+  font-size: 1rem;
+  padding: 10px 15px;
+}
+#footernav{
+  /* display: flex; */
+  justify-content: space-between;
+  /* align-items: center; */
 }
