--- a/style.css
+++ b/style.css
@@ -1,152 +1,207 @@
 body {
-  background-color: black;
-  /* background-repeat: no-repeat;
+    background-color: black;
+    /* background-repeat: no-repeat;
   background-position: center; */
 }
+
 #whole-body {
-  gap: 1em;
-  background-color: #edf6f9;
+    background-color: #edf6f9;
 }
+
 .opac {
-  opacity: 0.5;
-  pointer-events: none;
+    opacity: 0.5;
+    pointer-events: none;
 }
+
 header {
-  text-align: center;
-  color: red;
-  font-size: 3em;
+    text-align: center;
+    color: red;
+    font-size: 3em;
+    cursor: pointer;
 }
-#heading {
-  width: 100%;
-  height: 5em;
-  background-color: #81b29a;
-  padding-top: 0px;
+
+.heading {
+    width: 100%;
+    height: 5em;
+    background-color: #81b29a;
+    padding-top: 0px;
 }
+
+.heading.sports {
+    background-color: blue;
+}
+
+.heading.science {
+    background-color: yellow;
+}
+
 div#navbar {
-  background-color: #0a9396;
-  text-align: center;
-  height: 3em;
+    background-color: #0a9396;
+    text-align: center;
+    height: 3em;
+    transition: 300ms;
 }
+
+#float {
+    text-align: center;
+    background-color: #0a9396;
+    height: 30px;
+    color: red;
+}
+
 .hide {
-  display: none;
+    display: none;
 }
+
 #navlist {
-  display: inline-flex;
-  list-style: none;
-  gap: 5em;
-  align-items: center;
+    display: inline-flex;
+    list-style: none;
+    gap: 5em;
+    align-items: center;
 }
+
 button#categories {
-  float: right;
-  width: 10%;
-  margin-right: 4px;
-  overflow: auto;
-  position: absolute;
-  top: 40px;
-  right: 20px;
-  top: 30px;
+    float: right;
+    width: 10%;
+    margin-right: 4px;
+    overflow: auto;
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    background-color: #ffddd2;
+    border: none;
 }
+
+#categories:hover {
+    background-color: #ddbea9;
+}
+
 li:hover {
-  color: red;
-  transition: 300ms;
-  cursor: pointer;
+    color: red;
+    transition: 300ms;
+    cursor: pointer;
 }
+
 div.card {
-  gap: 2em;
-  
-  overflow-wrap: break-word;
-  width: 100%;
-  background-color: #d8f3dc;
+    display: inline-block;
+    margin-bottom: 1.5em;
+    border-radius: 10px;
+    gap: 2em;
+    overflow-wrap: break-word;
+    width: 100%;
+    background-color: #d8f3dc;
 }
+
 main#forgap {
-  padding: 1rem;
-  padding-bottom: 2em;
-  column-gap: 10px;
-  background-color: #b7b7a4;
+    display: block;
+    float: bottom;
+    /* gap: 2em; */
+    padding: 1rem;
+    padding-right: 1em;
+    padding-bottom: 2em;
+    padding-top: 2em;
+    background-color: #b7b7a4;
 }
 
 #newspublished {
-  text-align: right;
-  bottom: 0px;
+    text-align: right;
+    bottom: 0px;
 }
+
 .hide {
-  display: none;
+    display: none;
 }
+
 #modal {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  border: 2px solid black;
-  border-radius: 10px;
-  transition: 400ms ease-in-out;
-  z-index: 10;
-  background-color: white;
-  width: 400px;
-  max-width: 80%;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    border: 2px solid black;
+    border-radius: 10px;
+    transition: 400ms ease-in-out;
+    z-index: 10;
+    background-color: white;
+    width: 400px;
+    max-width: 80%;
 }
+
 #modal.active {
-  transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
 }
+
 #close {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 1.5rem;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.5rem;
 }
+
 #modal-header {
-  display: flex;
-  justify-content: space-between;
-  /* align-items: center; */
-  border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    border-bottom: 1px solid black;
 }
+
 #headingofmodal {
-  font-size: 1.4rem;
-  font-weight: bold;
-  padding: 5px 7px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 5px 7px;
 }
+
 #modalp {
-  font-size: 1rem;
-  padding: 10px 15px;
+    font-size: 1rem;
+    padding: 10px 15px;
 }
+
 #footernav {
-  /* display: flex; */
-  /* justify-content: space-between; */
-  gap: 4em;
-  background-color: #f0efeb;
-  /* padding-left: 10em; */
-  text-align: center;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    gap: 4em;
+    background-color: #f0efeb;
+    /* padding-left: 10em; */
+    text-align: center;
 }
+
 #heart {
-  height: 80px;
-  text-align: center;
-  background-color: #f0efeb;
-  font-size: 20px;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    background-color: #f0efeb;
+    font-size: 20px;
 }
+
 .btn:hover {
-  font-size: 2em;
+    font-size: 2em;
 }
+
 .fa-solid {
-  font-size: 25px;
-  background: transparent;
-  outline: none;
-  border: none;
-  color: white;
-  border-color: black;
+    font-size: 25px;
+    background: transparent;
+    outline: none;
+    border: none;
+    color: white;
+    border-color: black;
 }
+
 .color {
-  color: red;
+    color: red;
 }
+
 .btn {
-  
-  /* background: transparent; */
-  font-size: 2.2em;
+    font-size: 3em;
+    font-size: 2.2em;
 }
-.card:hover{
-  background-color: #b7e4c7;
+
+.card:hover {
+    background-color: #b7e4c7;
 }
-/* button:not(:disabled) {
-  cursor: pointer;
-  font-size: 3em;
-} */
+
+#thankyou.active {
+    z-index: 1;
+    opacity: 1;
+    text-align: center;
+    margin: 0px;
+}
