--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ header {
     width: 100%;
     height: 5em;
     background-color: #81b29a;
+    background-image: url(Images/wallpaperflare-cropped\ \(1\).jfif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-top: 0px;
 }
 
@@ -36,7 +40,7 @@ header {
 }
 
 div#navbar {
-    background-color: #0a9396;
+    background-color: #cfdbd5;
     text-align: center;
     height: 3em;
     transition: 300ms;
@@ -44,9 +48,10 @@ div#navbar {
 
 #float {
     text-align: center;
-    background-color: #0a9396;
+    background-color: #cfdbd5;
     height: 30px;
     color: red;
+    width: 100%;
 }
 
 .hide {
@@ -58,6 +63,7 @@ div#navbar {
     list-style: none;
     gap: 5em;
     align-items: center;
+    font-weight: bold;
 }
 
 button#categories {
@@ -89,18 +95,20 @@ div.card {
     gap: 2em;
     overflow-wrap: break-word;
     width: 100%;
+    opacity: 0.9;
     background-color: #d8f3dc;
 }
 
 main#forgap {
-    display: block;
     float: bottom;
     /* gap: 2em; */
     padding: 1rem;
     padding-right: 1em;
     padding-bottom: 2em;
     padding-top: 2em;
-    background-color: #b7b7a4;
+    background-image: url(Images/wp7969036-blurry-ultra-hd-wallpapers.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #newspublished {
@@ -124,6 +132,10 @@ main#forgap {
     background-color: white;
     width: 400px;
     max-width: 80%;
+    background: url(Images/n-n-BtbjCFUvBXs-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #modal.active {
@@ -141,7 +153,6 @@ main#forgap {
 #modal-header {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     border-bottom: 1px solid black;
 }
 
@@ -157,11 +168,12 @@ main#forgap {
 }
 
 #footernav {
-    /* display: flex; */
-    /* justify-content: space-between; */
     gap: 4em;
     background-color: #f0efeb;
-    /* padding-left: 10em; */
+    background-image: url(Images/4k-plain-blurred-background-high-definition-wallpaper-40965\ \(3\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
 }
 
@@ -169,12 +181,13 @@ main#forgap {
     width: 100%;
     height: 100px;
     text-align: center;
-    background-color: #f0efeb;
+    /* background-color: #f0efeb; */
     font-size: 20px;
 }
 
 .btn:hover {
-    font-size: 2em;
+    font-size: 2.5em;
+    color: red;
 }
 
 .fa-solid {
@@ -190,11 +203,6 @@ main#forgap {
     color: red;
 }
 
-.btn {
-    font-size: 3em;
-    font-size: 2.2em;
-}
-
 .card:hover {
     background-color: #b7e4c7;
 }
@@ -204,4 +212,9 @@ main#forgap {
     opacity: 1;
     text-align: center;
     margin: 0px;
+}
+
+button.btn {
+    font-size: 2em;
+    border: none;
 }
