--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #whole-body {
-    background-color: #2a9d8f;
+    background-color: #343a40;
 }
 
 .opac {
@@ -23,7 +23,8 @@ header {
 .heading {
     width: 100%;
     height: 5em;
-    background-color: #2a9d8f;
+    background-color: #343a40;
+    color: white;
     /* background-image: url(Images/wallpaperflare-cropped\ \(1\).jfif); */
     background-position: center;
     background-repeat: no-repeat;
@@ -74,6 +75,7 @@ button#categories {
     position: absolute;
     right: 20px;
     top: 30px;
+    color: white;
     background: transparent;
     border: none;
     
@@ -86,6 +88,7 @@ button#categories {
 #categories:hover {
     background-color: #ddbea9;
     border-radius: 10px;
+    color: black;
     /* transform: translateY(-10px) scale(1);; */
 }
 
